--- a/sites/all/themes/philanthropy_theme/sass/_philanthropy-custom.scss
+++ b/sites/all/themes/philanthropy_theme/sass/_philanthropy-custom.scss
@@ -197,7 +197,7 @@ a {
 #logo {
   position: absolute;
   top: 55px;
-  left: 35px;
+  left: 25px;
 }
 
 #site-name a {
